# LoopLens

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_CN.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/looplens-proxy/: Cargo.toml
crates/looplens-proxy/src/: main.rs
desktop/: package-lock.json  package.json  vite.config.ts
desktop/src/: App.jsx  App.tsx  flowModel.js  flowModel.ts  index.html  loopModel.js  loopModel.ts  main.tsx  native.js  native.ts  styles.css  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
docs/: PROJECT_STRUCTURE.md
src/: main.rs
